--- a/public/index.html
+++ b/public/index.html
@@ -90,6 +90,38 @@
       <!-- row of ticket blocks -->
       <div class="container mt-5">
         <div class="row gx-3" id="overview">
+          <!-- <div class="col-12 col-sm-6 col-md-3">
+            <div class="card">
+              <div class="card-body d-flex flex-column align-items-center justify-content-center">
+                <h2 class="fs-4 text-secondary">Unresolved</h2>
+                <p class="fs-1 fw-bold">60</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-3">
+            <div class="card">
+              <div class="card-body d-flex flex-column align-items-center justify-content-center">
+                <h2 class="fs-4 text-secondary">Overdue</h2>
+                <p class="fs-1 fw-bold">16</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-3">
+            <div class="card">
+              <div class="card-body d-flex flex-column align-items-center justify-content-center">
+                <h2 class="fs-4 text-secondary">Open</h2>
+                <p class="fs-1 fw-bold">43</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-3">
+            <div class="card">
+              <div class="card-body d-flex flex-column align-items-center justify-content-center">
+                <h2 class="fs-4 text-secondary text-nowrap">On hold</h2>
+                <p class="fs-1 fw-bold">64</p>
+              </div>
+            </div>
+          </div> -->
         </div>
       </div>
       <!-- today's trend graph -->
@@ -118,6 +150,22 @@
           </div>
           <ul class="list-group list-group-flush border-start flex-grow-1 justify-content-between border-top-0"
             id="trends">
+            <!-- <li class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1">
+              <h3 class="fs-6 text-secondary">Resolved</h3><span class="fw-bold">449</span>
+            </li>
+            <li class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1">
+              <h3 class="fs-6 text-secondary">Received</h3><span class="fw-bold">426</span>
+            </li>
+            <li
+              class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1 text-nowrap">
+              <h3 class="fs-6 text-secondary">Average first response time</h3><span class="fw-bold">33m</span>
+            </li>
+            <li class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1">
+              <h3 class="fs-6 text-secondary">Average response time</h3><span class="fw-bold">3h 8m</span>
+            </li>
+            <li class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1">
+              <h3 class="fs-6 text-secondary">Resolution within SLA</h3><span class="fw-bold">94%</span>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -133,8 +181,8 @@
                 </div>
                 <p class="card-text"><span class="text-secondary">Group:</span> Support</p>
               </div>
-              <ul class="list-group list-group-flush border-top-0">
-                <li class="list-group-item d-flex justify-content-between">
+              <ul class="list-group list-group-flush border-top-0" id="unresolvedTickets">
+                <!-- <li class="list-group-item d-flex justify-content-between">
                   <span class="fw-bold">Waiting on Feature Request</span>
                   <span class="text-secondary">4238</span>
                 </li>
@@ -149,7 +197,7 @@
                 <li class="list-group-item d-flex justify-content-between">
                   <span class="fw-bold">Pending</span>
                   <span class="text-secondary">281</span>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
@@ -164,13 +212,13 @@
                 <p class="card-text text-secondary">Today</p>
               </div>
               <form>
-                <ul class="list-group list-group-flush border-top-0">
+                <ul class="list-group list-group-flush border-top-0" id="tasks">
                   <li class="list-group-item d-flex justify-content-between">
                     <span class="fw-bold text-secondary">Create new task</span>
                     <button type="button" class="btn btn-sm btn-outline-secondary"><img src="assets/plus.svg"
                         alt="Add"></button>
                   </li>
-                  <li class="list-group-item d-flex justify-content-between">
+                  <!-- <li class="list-group-item d-flex justify-content-between">
                     <div class="form-check form-check-inline">
                       <input class="form-check-input rounded-circle" type="checkbox" name="tasks"
                         value="Finish Ticket Update" id="task1">
@@ -193,7 +241,7 @@
                       <label class="form-check-label fw-bold" for="task3">Update ticket report</label>
                     </div>
                     <span class="badge text-bg-secondary d-flex align-items-center">DEFAULT</span>
-                  </li>
+                  </li> -->
                 </ul>
               </form>
             </div>
